config/mgmt/auth-infra/ingress.ytt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dex
    namespace: dex
    annotations:
        ingress.kubernetes.io/force-ssl-redirect: "true"
        projectcontour.io/tls-cert-namespace: secure-ingress
spec:
    tls:
        - hosts:
            - dex.yaml.tv
          secretName: wildcard-yaml-tv
    rules:
        - host: dex.yaml.tv
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: dex
                        port:
                            name: dex
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1e25ew05v62a720vhsetzrhalehzpsv6l6c5usw2mn4lley85ssnsajz2v3
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxVys5NVd4aVZjNzVjSkc4
[...]
            gmDqB/s8WcAfI+uGS3u8UkkStdntW9Za9Jj9VOLlXGoYCk7eRT/omQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-03-25T00:52:21Z"
    mac: ENC[AES256_GCM,data:k+2FCyrXWMYlvKsYkcbttYa+N7E6zTPJmOddzUckGr0slREzb04FgjshvvZVcEZVxQvNNfjHRMjEe6XIW9hCqh0/7SJEU29YZ4TTliekkc7quYxK48+wH3zpi47RBVPgdi9cYXr5M2c7di3ZHDiPucmu39rh5U8Aej83p88Qy9M=,iv:j6hzsh2RLaErgxTmdU11/JMelEByE6saI4gANvFj+Ko=,tag:1tstD0GoINlPILhJoj7Y/A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|.*client.secret.*)$
    version: 3.7.2
